--- a/source/weather.css
+++ b/source/weather.css
@@ -243,6 +243,9 @@ body {
         margin-top: 4px;
     }
 
+    .temperature-web {
+        display: none;
+    }
     /* hide this on mobile-view */
     .doppler {
         display: none;
@@ -457,6 +460,7 @@ body {
         flex-direction: column;
         width: 60%;
         margin-left: 10%;
+        
     }
 
     .current-image {
@@ -494,7 +498,11 @@ body {
 
     .temperature {
         font-size: 7em;
-        margin-top: 4px;
+        font-family: 'Saira Extra Condensed', sans-serif;
+    }
+    
+    .temperature-web {
+        display: none;
     }
 
     /* hide this on mobile-view */
@@ -550,26 +558,25 @@ body {
 }
 
 @media (min-width: 791px) {
-
     header {
         text-align: left;
-        font-size: 4.5em;
+        margin-left: 7.25%;
+        font-size: 4em;
         color: white;
         padding-top: 1.5em;
-        padding-bottom: 1.5%;
+        padding-bottom: 0.2em;
         width: 100%;
-        margin-left: 7%;
         line-height: 1.2;
     }
 
     h2 {
         text-align: left;
-        font-size: 3.1em;
+        margin-left: 7.25%;
+        font-size: 2.7em;
         font-weight: 700;
         color: #2D3091;
-        padding-bottom: 3%;
+        padding-bottom: 1em;
         width: 100%;
-        margin-left: 7%;
         margin-right: 2%;
     }
 
@@ -599,23 +606,26 @@ body {
         width: 20%;
         font-weight: 300;
         justify-content: center;
-        margin-left: 6%;
+        margin-left: 7%;
+        margin-top: 1.5em;
     }
 
     .bottom-item-time {
-        font-size: 2.5vw;
-        margin-top: 50%;
+        font-size: 2em;
+        margin-left: 0.5em;
     }
 
     .bottom-item-image {
         display: block;
-        width: 50%;
-        margin-top: 5em;
-        margin-bottom: 5em;
+        max-width: 50%;
+        height: auto;
+        margin-top: 25%;
+        margin-bottom: 25%;
     }
 
     .bottom-item-temperature {
-        font-size: 5vw;
+        font-size: 5em;
+        margin-left: 0.2em;
     }
 
     main {
@@ -633,23 +643,8 @@ body {
 
     /* For non-mobile views: change flex-direction to column, and use flex-wrap */
     .forecast {
-        display: none;
         flex-direction: column;
         flex-wrap: wrap;
-        width: 100%;
-    }
-
-    .forecast-web {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: space-around;
-    }
-    
-    .forecast-web-box {
-        display: flex;
-        flex-direction: column;
         width: 100%;
     }
 
@@ -660,22 +655,23 @@ body {
     }
 
     p.forecast-text {
-        font-size: 2em;
+        font-size: 1.8em;
         text-align: left;
-        margin-left: 7%;
+        margin-left: 7.5%;
         padding-bottom: 22px;
+        padding-right: 0.5em;
     }
 
     .input-container {
         display: flex;
         flex-direction: row;
-        width: 50%;
+        width: 33em;
     }
 
     .input-field {
         text-align: center;
         font-size: x-large;
-        width: 15em;
+        width: 75%;
         margin-left: 3%;
         height: 1.38em;
         border: none;
@@ -686,7 +682,7 @@ body {
     }
 
     .button-style {
-        width: 6em;
+        width: 25%;
         height: 1.8em;
         margin-left: 5%;
         text-align: center;
@@ -700,20 +696,22 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        padding-bottom: 5em;
     }
 
     .weather {
         display: flex;
         flex-direction: row;
-        width: 60%;
-        margin-left: 10%;
-        padding-top: 5em;
+        width: 100%;
+        margin-left: 11.5%;
+        margin-top: 3.4em;
     }
 
     .current-image {
-        width: 12em;
-        padding-left: 5em;
-        padding-right: 5em;
+        width: 100%;
+        max-width: 20em;
+        padding-right: 3em;
+        order: 2;
 
     }
 
@@ -724,8 +722,7 @@ body {
         font-weight: 100;
         line-height: 1.3;
         text-align: center;
-        width: 100%;
-        padding-bottom: 2em;
+        order: 1;
     }
 
     .time {
@@ -736,54 +733,57 @@ body {
 
 
     .vertical-line {
-        color: black;
-        font-size: 7em;
-        font-weight: 100;
-        padding-left: 20px;
-        padding-right: 20px;
+        display: none;
     }
 
     .temperature {
+        display: none;
+    }
+    
+    .temperature-web {
         font-size: 7em;
-        margin-top: 4px;
+        font-family: 'Saira Extra Condensed', sans-serif;
+        font-weight: 100;
+        line-height: 1.3;
+        order: 3;
     }
 
     /* hide this on mobile-view */
     .doppler {
         position: relative;
         display: flex;
-        width: 80em;
-        margin-top: 3em;
-        margin-bottom: 5em;
-        margin-left: 35em;
+        width: 60%;
+        margin-right: 10%;
+        margin-left: 5%;
+        margin-bottom: 10%;
+
 
     }
 
     img.doppler {
         position: absolute;
-        width: 50%;
+        width: 100%;
         filter: grayscale(100%);
         clip-path: circle(40%);
         margin-top: 20%;
         bottom: 0;
         right: 0;
-
     }
 
     .doppler-gif {
         position: absolute;
-        width: 50%;
+        width: 100%;
         clip-path: circle(40%);
-        margin-top: 20%;
-        margin-bottom: 5em;
+        margin-bottom: 1.5em;
+        margin-right: 1.5em;
         bottom: 0;
         right: 0;
-        
     }
+
     .arrow-container {
         width: 0%;
-        padding-bottom: 1em;
-        padding-top: 1em;
+        padding-bottom: 1.5em;
+        padding-top: 1.5em;
     }
 
     .arrow-img {
@@ -795,7 +795,7 @@ body {
     hr {
         border: none;
         border-left: 1px solid darkslategrey;
-        height: 45vh;
+        height: 25vh;
         width: 1px;
         margin-top: 5em;
     }
