--- a/server/public/weather.css
+++ b/server/public/weather.css
@@ -260,7 +260,7 @@ body {
 
     @keyframes swipe {
         from {
-            bottom: 0%;
+            bottom: 0;
         }
 
         to {
@@ -274,7 +274,7 @@ body {
         }
 
         to {
-            bottom: 0%;
+            bottom: 0;
         }
     }
 
@@ -284,13 +284,13 @@ body {
         }
 
         to {
-            top: 0%;
+            top: 0;
         }
     }
 
     @keyframes move-down {
         from {
-            top: 0%;
+            top: 0;
         }
 
         to {
@@ -514,14 +514,14 @@ body {
   }
 
     .arrow-container {
-        width: 0%;
+        width: 0;
         padding-bottom: 1.5em;
         padding-top: 1.5em;
     }
 
     .arrow-img {
         display: none;
-        width: 0%;
+        width: 0;
         margin: auto;
     }
 
@@ -748,14 +748,14 @@ body {
     }
 
     .arrow-container {
-        width: 0%;
+        width: 0;
         padding-bottom: 1.5em;
         padding-top: 1.5em;
     }
 
     .arrow-img {
         display: none;
-        width: 0%;
+        width: 0;
         margin: auto;
     }
 
